--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "lucide-react": "0.456.0",
+    "next-themes": "^0.4.3",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
