--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,9 +16,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/terminus": "^11.0.0",
+    "@prisma/client": "^6.4.0",
     "@repo/api": "workspace:*",
+    "better-auth": "^1.2.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -34,6 +40,7 @@
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "jest": "^29.7.0",
+    "prisma": "^6.4.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.2.5",
