--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,12 +12,17 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^1.2.32",
+    "@hookform/resolvers": "^3.9.1",
     "@repo/ui": "workspace:*",
+    "better-auth": "^1.2.3",
     "lucide-react": "0.456.0",
-    "next-themes": "^0.4.3",
     "next": "^14.2.3",
+    "next-themes": "^0.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
