--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,10 @@
     "test:e2e": "playwright test"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^1.2.32",
     "@repo/ui": "workspace:*",
+    "better-auth": "^1.2.5",
+    "lucide-react": "^0.475.0",
     "next": "^15.2.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
